# BigNumbers

./: CMakeLists.txt  main.cpp  tests-ar.cpp  tests-bool.cpp  tests.cpp
headers/: big.h
src/: constructors.cpp  functions.cpp  main.cpp  operators.cpp
